--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.3.4",
     "express": "^4.18.2",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
+    "pino": "^8.11.0",
+    "pm2": "^5.3.0",
     "redis": "^4.6.5",
+    "rimraf": "^4.4.1",
     "sequelize": "^6.30.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
